nav and header styling changes, still need too fix new-tweet text body spacing

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,14 +1,13 @@
-header {
+.site-header {
   display: flex;
   height: 400px;
   min-width: 100%;
   flex-direction: column;
   align-items: center;
-  padding: 1em;
-  background-color: #cc8800;
+  background-color: lightgray;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 }
 
-
-
-
+.site-header > * {
+  margin: 0.4em;
+}
