--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,39 +1,33 @@
 nav {
-
   display: flex;
   justify-content: space-between;
   height: 120px;
   min-width: 100%;
-  background-color: #4056a1;
-  color: #FFFFFF;
+  background-color: lightgray;
+  color: black;
   position: sticky;
   top: 0;
-
 }
 
-nav span {
-
+nav .tweeter {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin: 0em 1.5em 1.5em 1.5em;
   font-family:'Bungee', cursive;
-
+  margin: 0.5em;
 }
 
-.nav-right {
-
+nav .nav-right {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  margin: 0em 1.5em 1.5em 1.5em;
+  margin: 0.5em;
+  cursor: pointer;
   font-family: 'Source Sans Pro', sans-serif;
-
 }
 
-
-.nav-right i {
-
+nav .nav-right i {
   color: red;
-
+  padding: 0.2em;
 }
